added edit delete, and search

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -20,6 +20,7 @@
                 <li><a href="/games/search">Search</a></li>
                 <li><a href="/games/create">Create Game Offer</a></li>
                 <li><a href="/users/logout">Logout</a></li>
+                <li>User: {{user.username}}</a></li>
                 {{else}}
                 <li><a href="/users/login">Login</a></li>
                 <li><a href="/users/register">Register</a></li>
